--- a/views/index.html
+++ b/views/index.html
@@ -1,29 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Mood Marbles Bot</title>
+    <title>SnoopysBF Twitter Bot</title>
   </head>
   <body>
-    <header>
-      <h1>Oh, hello.</h1>
-      <link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:400,700&display=swap" rel="stylesheet">
-      <style>
-        html {font-family: 'Noto Sans SC', sans-serif;}
-        h1, .bold {font-weight: 700}
-      </style>
-    </header>
-
-    <main>
-      <p class="bold">Welcome to the SnoopysBF tweets bot!</p>
-
-      <p>There's nothing much to see here: the app is not designed to be accessed directly. Typically it would be triggered on a schedule using a service like
-      <a href="https://cron-job.org/">cron-job.org</a>.</p>
-    </main>
-
-    <!-- include the Glitch button to show what the webpage is about and
-          to make it easier for folks to view source and remix -->
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-    <script src="https://button.glitch.me/button.js"></script>
-
+    <a class="twitter-timeline" href="https://twitter.com/SnoopysBF?ref_src=twsrc%5Etfw">Tweets by SnoopysBF</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
